--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.firebase:firebase-database:16.0.6'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
-    implementation "com.google.android.gms:play-services-gcm:16.0.0"
+    implementation 'com.google.android.gms:play-services-gcm:16.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
-
-
